2007-10-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs: Add an Optimize method which
	is the opposite of Simplify. Based on a patch by Carlo.

	* Mono.Cecil.Cil/CodeWriter.cs: don't care about reducing MaxStack.

2007-10-11  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeReference.cs: add a IsNested helper property.

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Integrate patch for Carlo, start working on enum writing
		in custom attribute.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* mono-cecil.pc.in:  Updated the version number.

2007-10-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/Instruction.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Move CodeWriter.GetSize (Instruction) to Instruction.

	Integration of patches from Carlo Kok <ck@remobjects.com>:

	* Mono.Cecil.Cil/Document.cs
	  Mono.Cecil.Cil/DocumentType.cs
	  Mono.Cecil.Cil/DocumentLanguage.cs
	  Mono.Cecil.Cil/DocumentLanguageVendor.cs:
		Use plain guids for Document properties so it's easy
		for third party document providers to use their own.

	* Mono.Cecil/ParameterDefinition.cs:
		Clean or set the HasFieldMarshal flag when setting
		MarshalSpecs on parameters.

	* Mono.Cecil/AssemblyNameReference.cs:
		Protect against null culture.

	* Mono.Cecil/FieldDefinition.cs:
		Clean or set the HasFieldMarshal flag when setting
		MarshalSpecs on fields.

	* Mono.Cecil/GenericInstanceType.cs:
		Properly initialize the IsValueType from the element type.

2007-10-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs: check for duplicates
	in the MemberRef row.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* standalone.make: Revert changes so standalone Cecil (in SVN) can
	be built using this Makefile (required for Gendarme);
	* README: Update build and bug instructions.

2007-10-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs: first lookup assemblies